# FRIDAY

./: .coverage  .env.example  .env.template  .gitignore  README.md  action_history.py  alembic.ini  ambient.py  awareness.py  backchannels.py  barge_in.py  briefing.py  browser_tool.py  calendar_caldav.py  calendar_service.py  code_sandbox.py  companion_bridge.py  dialogue_state.py  dialogue_tasks.py  docker-compose.yml  elevenlabs_tts.py  env_coach.py  feedback_learning.py  glance_mode.py  identity_fusion.py  jarvis_actions.py  jarvis_brain.py  jarvis_edge_tts.py  jarvis_exceptions.py  jarvis_shell.py  jarvis_shell.spec  jarvis_system_tools.py  live_observers.py  local_llm.py  mac_automation.py  main.py  meeting_prep.py  mem2.py  message_draft.py  mic_profile.py  (+41 more)
services/agent/: pyproject.toml
services/agent/src/friday_agent/: __init__.py  agents_specialized.py  context_builder.py  intent_router.py  planner.py  response_agent.py
services/api/: .coverage  pyproject.toml
services/api/alembic/: env.py  script.py.mako
services/api/alembic/versions/: 20260427_0001_initial_schema.py  20260428_0002_workflow_tool_calls.py  20260429_0003_phase10_proactive_rules.py  20260430_0004_phase11_smart_home.py
services/api/src/friday_api/: __init__.py  celery_app.py  config.py  deps.py  main.py  runtime.py
services/api/src/friday_api/db/: session.py  sync_session.py
services/api/src/friday_api/models/: __init__.py  audit_notifications.py  documents.py  memory_extra.py  proactive_rules.py  smart_home.py  user_session_message.py  workflows_tasks.py
services/api/src/friday_api/persistence/: audit.py  sync_db.py
services/api/src/friday_api/providers/: base.py  embeddings.py  factory.py  mock.py  openai_chat.py  openai_stub.py
services/api/src/friday_api/routers/: approvals.py  audit.py  auth_stub.py  documents.py  health.py  memory.py  meta.py  notifications.py  sessions.py  smart_home.py  speech_coqui.py  tools_rest.py  workflows.py  ws.py
services/api/src/friday_api/schemas/: approvals.py  audit.py  chat.py  documents_http.py  memory.py  meta.py  notifications_http.py  smart_home_http.py  workflows.py
services/api/src/friday_api/secrets/: base.py
services/api/src/friday_api/services/: __init__.py  approval_store.py  coqui_xtts.py  document_service.py  local_host_handlers.py  local_tool_inputs.py  local_workspace.py  memory_service.py  (+11 more)
services/api/tests/: conftest.py  test_approvals_http.py  test_audit_http.py  test_documents_http.py  test_embeddings_helpers.py  test_health.py  test_memory_http.py  test_meta_http.py  test_notifications_http.py  test_otel_phase13.py  test_personal_os_local_integration.py  test_personal_os_wiring.py  test_phase12_integration.py  test_phase12_unit.py  test_planner_phase5.py  test_realtime_webrtc.py  test_sessions_sse_stt.py  test_smart_home_http.py  test_smart_home_merge.py  test_speech_coqui.py  test_text_chunking.py  test_workflows_http.py
services/coqui-local-tts/: pyproject.toml
services/coqui-local-tts/src/coqui_local_tts/: __init__.py  app.py
services/tools/: pyproject.toml
services/tools/src/friday_tools/: __init__.py  gateway.py  policy.py  registry.py  types.py
(+113 files in other folders)
