[project]
name = "friday-agent"
version = "0.1.0"
description = "Agent orchestration layer for FRIDAY"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
