[project]
name = "friday-api"
version = "0.1.0"
description = "FastAPI orchestration layer for FRIDAY"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "pydantic-settings>=2.2",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "redis>=5",
  "psycopg[binary]>=3.2",
  "pgvector>=0.3",
  "structlog>=24",
  "orjson>=3.10",
  "celery[redis]>=5.4",
  "opentelemetry-api>=1.29,<1.32",
  "opentelemetry-sdk>=1.29,<1.32",
  "opentelemetry-exporter-otlp-proto-http>=1.29,<1.32",
  "opentelemetry-instrumentation-fastapi>=0.51b0,<0.53",
  "opentelemetry-instrumentation-sqlalchemy>=0.51b0,<0.53",
  "opentelemetry-instrumentation-httpx>=0.51b0,<0.53",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5",
  "coverage[toml]>=7",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["friday_api"]
omit = [
    "*/friday_api/routers/ws.py",
    "*/friday_api/tasks/tools.py",
    "*/friday_api/services/workflow_service.py",
    "*/friday_api/providers/openai_chat.py",
    "*/friday_api/services/local_tool_inputs.py",
    "*/friday_api/services/speech_transcription.py",
    "*/friday_api/services/realtime_openai.py",
]

[tool.coverage.report]
fail_under = 83
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "^if __name__ == [\"']__main__[\"']:",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
friday-api = "friday_api.main:dev"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
