[project]
name = "friday-coqui-local-tts"
version = "0.1.0"
description = "Thin HTTP wrapper around open-source Coqui TTS (local XTTS inference) for FRIDAY"
requires-python = ">=3.10,<3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "structlog>=24",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
friday-coqui-local-tts = "coqui_local_tts.app:dev"
