[project]
name = "friday-tools"
version = "0.1.0"
description = "Tool registry and gateway for FRIDAY"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.6",
  "jsonschema>=4.22",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
